--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_URL=jdbc:postgresql://localhost/student
+DB_URL=jdbc:postgresql://localhost/StudentManagementSystem
 USER=postgres
 PASSWORD=1234
