--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                org.nkon.studentmanagementsystem/org.nkon.studentmanagementsystem.HelloApplication
+                                org.nkon.studentmanagementsystem/org.nkon.studentmanagementsystem.StudentManagementSystemApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
